<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory

        app:title="Display">


        <ListPreference
            app:defaultValue="4"
            app:entries="@array/band_entries"
            app:entryValues="@array/band_values"
            app:key="band"
            app:title="@string/number_band"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:summary="Choose your theme"
            app:defaultValue="light"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/future_version">


        <ListPreference
            android:summary="Choose your theme"
            app:defaultValue="dialog"
            app:entries="@array/spinner_mode_entries"
            app:entryValues="@array/spinner_mode_values"
            app:key="spinner_mode"
            app:title="@string/spinner_mode"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>
    <Preference android:title="About">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/david4vilac" />

    </Preference>

</PreferenceScreen>